--- a/examples/simple/Pulumi.yaml
+++ b/examples/simple/Pulumi.yaml
@@ -1,9 +1,9 @@
 name: simple
 runtime: nodejs
-description: A simple xyz example
+description: A simple shopkeeper example
 
-# While developing, instruct pulumi to find the xyz binary at this location.
+# While developing, instruct pulumi to find the shopkeeper binary at this location.
 plugins:
   providers:
-    - name: xyz
+    - name: shopkeeper
       path: ../../bin
